compiler/testData/diagnostics/testsWithJsStdLib/native/anonymousInitializer.kt
// FIR_IGNORE
// FIR_IDENTICAL
external class A {
    <!EXTERNAL_ANONYMOUS_INITIALIZER!>init {
        definedExternally
    }<!>
}